--- a/drafts/estelar/statement.tex
+++ b/drafts/estelar/statement.tex
@@ -35,9 +35,9 @@ Este conjunto siempre será único, es decir, no cabe la posibilidad de dos solu
 \section*{Subtareas}
 \begin{itemize}
 %TODO
-  \item $V < 100$ y $C<100$ se puede hacer algo cuadrático
-  \item $V < 10^5$ y $C<10^5$ se puede contar cada número en un arreglo
-  \item $V < 10^5$ y $C<10^9$ hay que ordenarlo primero o guardar numero en un map
+  \item $N < 100$ y $S < 100$. %se puede hacer algo cuadrático
+  \item $N < 10^5$ y $S < 10^5$. %se puede contar cada número en un arreglo
+  \item $N < 10^5$ y $S < 10^9$. %hay que ordenarlo primero o guardar número en un map
 \end{itemize}
 
 \end{document}
