Minor changes to statements

--- a/contest/ajedrez/documents/statement.tex
+++ b/contest/ajedrez/documents/statement.tex
@@ -7,8 +7,8 @@
 
 \begin{document}
 \begin{problemDescription}
-  El ajedrez es un juego de tablero conocido principalmente por su dificultad.
-  Los mejores jugadores del mundo destacan por su gran capacidad de anticiparse a todas las posibles jugadas.
+  El ajedrez es un juego de tablero conocido por su dificultad.
+  Los mejores jugadores del mundo destacan por su capacidad de anticiparse a todas las posibles jugadas.
   El juego tiene ya casi 1500 años, pero continúa siendo muy popular y en la actualidad siguen desarrollándose nuevas técnicas y estrategias.
   
   El ajedrez se juega entre dos personas sobre un tablero de $8\times 8$ casillas.
