--- a/contest/interestelar/documents/statement.tex
+++ b/contest/interestelar/documents/statement.tex
@@ -37,7 +37,7 @@ Cada línea contiene un único entero $i$ ($1 \le i \le S$) correspondiente al s
 \end{inputDescription}
 
 \begin{outputDescription}
-  Tu respuesta debe consistir en una única línea con cinco enteros.
+  Tu respuesta debe consistir en una única línea con cinco enteros separados por espacios.
   Estos deben corresponder a los cinco sistemas que registraron más eventos.
   Puedes imprimir estos enteros en cualquier orden.
   Si existe más de una solución puedes reportar cualquiera.
