--- a/contest/interestelar/documents/statement.tex
+++ b/contest/interestelar/documents/statement.tex
@@ -34,6 +34,7 @@ Cada sistema es representado con un entero entre 1 y $S$.
 
 Las siguientes $N$ líneas corresponden a cada uno de los eventos con pulsaciones.
 Cada línea contiene un único entero $i$ ($1 \le i \le S$) correspondiente al sistema en el cual se detectó el evento.
+Se garantiza que al menos habrán cinco sistemas para los cuales existen eventos.
 \end{inputDescription}
 
 \begin{outputDescription}
@@ -50,8 +51,8 @@ Cada línea contiene un único entero $i$ ($1 \le i \le S$) correspondiente al s
 \end{scoreDescription}
 
 \begin{sampleDescription}
-\sampleIO{sample}
-\sampleIO{sample}
+% \sampleIO{sample}
+% \sampleIO{sample}
 \end{sampleDescription}
 
 \end{document}
