changes to ping-pong

--- a/contest/ping-pong/documents/statement.tex
+++ b/contest/ping-pong/documents/statement.tex
@@ -15,7 +15,7 @@ Cada vez que se juntan aprovechan de jugar un partido.
 Sus partidos no son profesionales y siguen las siguientes reglas que ellos mismos han inventado:
 \begin{itemize}
   \item El partido se juega a $N$ puntos y el primero que llega a los $N$ puntos gana.
-  \item La cantidad puntos, es decir, el valor de $N$, puede ser distinto en cada partido.
+  \item La cantidad de puntos, es decir, el valor de $N$, puede ser distinto en cada partido.
   \item En cada partido uno de los dos comienza sacando.
   \item Cada jugador conserva su saque hasta perder un punto.
 \end{itemize}
