Sample test cases for gollum,

--- a/contest/gollum/documents/statement.tex
+++ b/contest/gollum/documents/statement.tex
@@ -55,8 +55,9 @@ Tu tarea consiste en hacer un programa que dado un entero $n$ determine cuál es
 \textbf{Nota:} En la subtarea 3 el valor de $n$ puede ser muy grande y no entrar en una variable de tipo \texttt{int}. Debes asegurarte de guardar el valor en una variable de tipo \texttt{long long}.
 
 \begin{sampleDescription}
-% \sampleIO{sample}
-% \sampleIO{sample}
+\sampleIO{sample1}
+\sampleIO{sample2}
+\sampleIO{sample3}
 \end{sampleDescription}
 
 \end{document}
