--- a/contest/ping-pong/documents/statement.tex
+++ b/contest/ping-pong/documents/statement.tex
@@ -24,6 +24,7 @@ Lo que no saben Jota Pe y Nelman es que sus partidos son muy predecibles.
 Resulta que cada vez que a Jota Pe le toca sacar tiene una racha de $A$ puntos, es decir, gana $A$ puntos seguidos y luego pierde el saque.
 Lo mismo pasa con Nelman, cada vez que a él le toca sacar tiene una racha de $B$ puntos y luego pierde su saque.
 El largo de las rachas, es decir, el valor de $A$ y $B$, depende del día en que jueguen.
+Notar que cuando un jugador pierde el saque el oponente gana un punto.
 
 Jota Pe y Nelman quedarían muy sorprendidos si alguien fuera capaz de adivinar quién de los dos va a ganar un partido antes de que lo jueguen.
 >Qué tal si haces un programa para sorprenderlos?
@@ -48,8 +49,8 @@ Jota Pe y Nelman quedarían muy sorprendidos si alguien fuera capaz de adivinar 
 \end{scoreDescription}
 
 \begin{sampleDescription}
-% \sampleIO{sample1}
-% \sampleIO{sample1}
+\sampleIO{sample1}
+\sampleIO{sample2}
 \end{sampleDescription}
 
 \end{document}
