Updated statement with sample test case.

--- a/contest/interestelar/documents/statement.tex
+++ b/contest/interestelar/documents/statement.tex
@@ -45,14 +45,13 @@ Se garantiza que al menos habrán cinco sistemas para los cuales existen eventos
 \end{outputDescription}
 
 \begin{scoreDescription}
-  \score{30} Se probarán varios casos donde $0 < N \le 100$ y $0 < S \le 100$.
+  \score{30} Se probarán varios casos donde $5 \le N \le 100$ y $5 \le S \le 100$.
   \score{35} Se probarán varios casos donde $100 < N \le 10^5$ y $100 < S \le 10^5$.
   \score{35} Se probarán varios casos donde $100 < N \le 10^5$ y $10^5 < S \le 10^9$.
 \end{scoreDescription}
 
 \begin{sampleDescription}
-% \sampleIO{sample}
-% \sampleIO{sample}
+  \sampleIO{sample}
 \end{sampleDescription}
 
 \end{document}
