cambios chicos en enunciado de Gollum

--- a/contest/gollum/documents/statement.tex
+++ b/contest/gollum/documents/statement.tex
@@ -6,13 +6,13 @@
 
 \begin{document}
 \begin{problemDescription}
-\begin{center}
-	\includegraphics[scale=0.3]{gollum.png}
-\end{center}
+%\begin{center}
+%	\includegraphics[scale=0.3]{gollum.png}
+%\end{center}
 Nuestro querido amigo Gollum se encuentra en medio de un debate de acertijos contra el hábil Golomb por la disputa del anillo único.
 Luego de una infructuosa ronda de acertijos clásicos, Golomb propone el siguiente desafío a Gollum:
 
-``Considera una secuencia de enteros positivos $G(1), G(2), G(3),\dots$ con la propiedad de que para todo valor $n \geq 1$ entonces $G(n) \leq G(n+1)$ y además el número $n$ aparece exactamente $G(n)$ veces en la secuencia. >Cuál es el valor de $G(10^{10})$?''
+``Considera una secuencia de enteros positivos $G(1), G(2), G(3),\dots$ con la propiedad de que para todo valor $n \geq 1$ se tiene que $G(n) \leq G(n+1)$ y además el número $n$ aparece exactamente $G(n)$ veces en la secuencia. >Cuál es el valor de $G(10^{10})$?''
 
 % Luego de reflexionar por un momento y de emitir sonidos de naturaleza diversa, llega a la conclusi\'on de que existe una \'unica secuencia con las propiedades demandadas por Golomb.
 Gollum se estremece de emoción al escuchar tan emocionante problema.
