--- a/contest/interestelar/documents/statement.tex
+++ b/contest/interestelar/documents/statement.tex
@@ -14,21 +14,21 @@ La Oficina de Comunicaciones Interestelares (OCI) es una organización formada p
 La división de señales de alta potencia de la OCI ha descubierto recientemente un método para enviar señales con un alcance de cientos de años luz.
 Para probarlo, se iniciará un programa de emisión de estas ondas de largo alcance.
 Sin embargo, el programa es muy costoso, y en esta primera fase el presupuesto solo alcanza para emitir señales a 5 sistemas interestelares dentro de la Vía Láctea.
-Para apoyar el trabajo de la división de Búsqueda de Vida Extraterrestre (BVET), el directorio de la OCI ha determinado que el destino de estas señales sea determinado por los científicos de esta división.
+Para apoyar el trabajo de la división de Búsqueda de Vida Extraterrestre (BVET), el directorio de la OCI ha decidido que el destino de estas señales sea determinado por los científicos de esta división.
 
 La principal actividad de la BVET consiste en el análisis de ondas de radio provenientes de sistemas interestelares dentro de nuestra galaxia.
 Esporádicamente, aparecen pulsaciones que podrían indicar la presencia de vida extraterrestre.
 Sus equipos monitorean estas pulsaciones registrando para cada evento el sistema de donde provino.
 
 La BVET decidió emitir las señales a los cinco sistemas que hayan registrado más eventos con pulsaciones, pues esto indicaría una mayor probabilidad de existencia de vida extraterrestre.
-Sin embargo, sus equipos han registrado muchos eventos y están teniendo problemas para determinar cuales son los sistemas con más eventos.
+Sin embargo, sus equipos han registrado muchos eventos y están teniendo problemas para determinar cu\'ales son los sistemas con más eventos.
 
 \end{problemDescription}
 
 \begin{inputDescription}
 La entrada consiste en varias líneas.
 La primera línea contiene dos enteros $N$ y $S$ separados por un espacio.
-$N$ corresponde a la cantidad de eventos que han sido registrados por los equipos de la BVET.
+$N$ corresponde a la cantidad de eventos que han sido registrados por los equipos de la BVET, y
 $S$ corresponde a la cantidad de sistemas monitoreados.
 Cada sistema es representado con un entero entre 1 y $S$.
 
