--- a/contest/ping-pong/documents/statement.tex
+++ b/contest/ping-pong/documents/statement.tex
@@ -44,13 +44,23 @@ Jota Pe y Nelman quedarían muy sorprendidos si alguien fuera capaz de adivinar 
   Tu programa debe imprimir un 1 si Jota Pe es quién ganará el partido y un 2 si Nelman es quién ganará el partido.
 \end{outputDescription}
 
+%  10 puntos: P = 1, A = B = 0 / respuesta = 2
+%2) 10 puntos: P = 1, A = B = 1 / respuesta = 2 si N es múltiplo de 2, 1 si no lo es
+%3) 20 puntos: A = B / respuesta = el que no parte si N es múltiplo de A+1, 1 si no lo es
+
+
 \begin{scoreDescription}
-  \score{100} Este problema tiene solo una subtarea. Se probarán varios casos donde $1 \le N \le 100$ y $1 \le A, B \le N$.
+  \score{10} Se probarán varios casos donde $1 \le N \le 100$, $P=1$, y $A=B=0$.
+  \score{10} Se probarán varios casos donde $1 \le N \le 100$, $P=1$, y $A=B=1$.
+  \score{20} Se probarán varios casos donde $1 \le N \le 100$, y $A=B$, $0\le A,B \le N$.
+  \score{60} Se probarán varios casos donde $1 \le N \le 100$, y $1 \le A, B \le N$.
 \end{scoreDescription}
 
 \begin{sampleDescription}
+\sampleIO{sample0}
 \sampleIO{sample1}
 \sampleIO{sample2}
+\sampleIO{sample3}
 \end{sampleDescription}
 
 \end{document}
