ejemplos de in-out para ajedrez

--- a/contest/ajedrez/documents/statement.tex
+++ b/contest/ajedrez/documents/statement.tex
@@ -71,8 +71,12 @@
 \end{scoreDescription}
 
 \begin{sampleDescription}
-% \sampleIO{sample}
-% \sampleIO{sample}
+ \sampleIO{sample1}
+ \sampleIO{sample2}
+ \sampleIO{sample3}
+ \sampleIO{sample4}
+ \sampleIO{sample5}
+ \sampleIO{sample6}
 \end{sampleDescription}
 
 \end{document}
