warmup casos de ejemplo en suma

--- a/warmup/suma/documents/statement.tex
+++ b/warmup/suma/documents/statement.tex
@@ -51,7 +51,7 @@ Tu tarea consiste en leer dos enteros y calcular su suma.
 \end{inputDescription}
 
 \begin{outputDescription}
-  Debes imprimir una única linea con el resultado de la suma de $A$ más $B$.
+  Debes imprimir una única línea con el resultado de la suma de $A$ más $B$.
 \end{outputDescription}
 
 \begin{scoreDescription}
@@ -61,7 +61,7 @@ Tu tarea consiste en leer dos enteros y calcular su suma.
 
 \begin{sampleDescription}
 \sampleIO{sample1}
-\sampleIO{sample1}
+\sampleIO{sample2}
 \end{sampleDescription}
 
 \end{document}
