more subtasks for interestelar

--- a/contest/D - gollum/documents/statement.tex
+++ b/contest/D - gollum/documents/statement.tex
@@ -48,9 +48,10 @@ Tu tarea consiste en hacer un programa que dado un entero $n$ determine cuál es
 \end{outputDescription}
 
 \begin{scoreDescription}
-  \score{30} Se probarán varios casos donde $0 < n \leq 25$.
-  \score{35} Se probarán varios casos donde $25 < n \leq 10^5$
-  \score{35} Se probarán varios casos donde $10^5 < n \leq 10^{10}$
+  \score{10} Se probarán varios casos donde $0 < n \leq 15$.
+  \score{25} Se probarán varios casos donde $15 < n \leq 25$.
+  \score{30} Se probarán varios casos donde $25 < n \leq 10^5$.
+  \score{35} Se probarán varios casos donde $10^{8} < n \leq 10^{10}$.
 \end{scoreDescription}
 \textbf{Nota:} En la subtarea 3 el valor de $n$ puede ser muy grande y no entrar en una variable de tipo \texttt{int}. Debes asegurarte de guardar el valor en una variable de tipo \texttt{long long}.
 
