changes to suma

--- a/warmup/suma/documents/statement.tex
+++ b/warmup/suma/documents/statement.tex
@@ -19,7 +19,7 @@ El problema es que los números son muy grandes y no puede ingresarlos en su cal
 Alejandra espera que puedas ayudarla usando el computador.
 
 En \C y \Cpp una variable de tipo \Int es de 32 bits, esto quiere decir que puede guardar números en el rango $[-2^{31}, 2^{31}-1]$.
-El número más grande en este rango es el 2.147.483.647 que es aproximadamente $2\times 10^9$.
+El número más grande en este rango es el 2.147.483.647 que podemos representar aproximadamente como $2\times 10^9$.
 Si se intenta guardar un número más grande, como el 10.737.418.239, se obtendrán resultados inesperados.
 Afortunadamente en \C y \Cpp es posible almacenar números más grandes usando variables del tipo \Long.
 Estas variables son de 64 bits, es decir, pueden guardar números en el rango $[-2^{63}, 2^{63}-1]$.
