--- a/warmup/suma/documents/statement.tex
+++ b/warmup/suma/documents/statement.tex
@@ -55,8 +55,8 @@ Tu tarea consiste en leer dos enteros y calcular su suma.
 \end{outputDescription}
 
 \begin{scoreDescription}
-  \score{40} Se probarán varios casos donde $0\leq A,B < 2^{30}-1$.
-  \score{60} Se probarán varios casos donde $2^{30}\leq A,B < 2^{62}-1$.
+  \score{40} Se probarán varios casos donde $0\leq A,B \leq 2^{30}-1$.
+  \score{60} Se probarán varios casos donde $2^{30}\leq A,B \leq 2^{62}-1$.
 \end{scoreDescription}
 
 \begin{sampleDescription}
