--- a/contest/A - ping-pong/documents/statement.tex
+++ b/contest/A - ping-pong/documents/statement.tex
@@ -52,7 +52,7 @@ Jota Pe y Nelman quedarían muy sorprendidos si alguien fuera capaz de adivinar 
 \begin{scoreDescription}
   \score{10} Se probarán varios casos donde $1 \le N \le 100$, $P=1$, y $A=B=0$.
   \score{10} Se probarán varios casos donde $1 \le N \le 100$, $P=1$, y $A=B=1$.
-  \score{20} Se probarán varios casos donde $1 \le N \le 100$, y $A=B$, $0\le A,B \le N$.
+  \score{20} Se probarán varios casos donde $1 \le N \le 100$, $A=B$, y $0\le A,B \le N$.
   \score{60} Se probarán varios casos donde $1 \le N \le 100$, y $1 \le A, B \le N$.
 \end{scoreDescription}
 
