--- a/contest/titlepage.tex
+++ b/contest/titlepage.tex
@@ -72,7 +72,7 @@ Esta p\'agina muestra informaci\'on general que se aplica a todos los problemas.
 \itemsep 0em
 \item Toda escritura debe ser hecha hacia la {\bf salida est\'andar} usando, por ejemplo, las funciones \verb+printf+, \verb+std::cout+ o \verb+writeln+ dependiendo del lenguaje escogido.
 \item El resultado del caso de prueba debe ser escrito siguiendo el formato descrito para cada problema.
-\item {\bf El formato de salida debe ser seguido de manera estricta} considerando los espacios especificados, las may\'usculas y min\'usculas.
+\item {\bf El formato de salida debe ser seguido de manera estricta} considerando los espacios especificados.
 \item Toda l\'inea, incluyendo la \'ultima, debe terminar con un salto de l\'inea.
 \end{enumerate}
 
