new problemset gen - image in gollum

--- a/contest/D - gollum/documents/statement.tex
+++ b/contest/D - gollum/documents/statement.tex
@@ -6,9 +6,11 @@
 
 \begin{document}
 \begin{problemDescription}
-%\begin{center}
-%	\includegraphics[scale=0.3]{gollum.png}
-%\end{center}
+\begin{center}
+\vskip -1em
+	\includegraphics[scale=0.3]{gollum.jpg}
+\end{center}
+\vskip -1.5em
 Nuestro querido amigo Gollum se encuentra en medio de un debate de acertijos contra el hábil Golomb por la disputa del anillo único.
 Luego de una infructuosa ronda de acertijos clásicos, Golomb propone el siguiente desafío a Gollum:
 
