--- a/contest/titlepage.tex
+++ b/contest/titlepage.tex
@@ -37,6 +37,7 @@
 \end{titlingpage}
 
 
+\cleardoublepage
 \subsection*{Informaci\'on General}
 
 Esta p\'agina muestra informaci\'on general que se aplica a todos los problemas.
