--- a/contest/D - gollum/documents/statement.tex
+++ b/contest/D - gollum/documents/statement.tex
@@ -78,4 +78,9 @@ en una variable de tipo \texttt{int}. Debes asegurarte de guardar el valor en un
 \sampleIO{sample3}
 \end{sampleDescription}
 
+\cleardoublepage
+\pagestyle{empty}
+\begin{minipage}{\textwidth}
+\end{minipage}
+
 \end{document}
