title page con UMayor y JCC

--- a/contest/titlepage.tex
+++ b/contest/titlepage.tex
@@ -16,8 +16,8 @@
   \Large{\bf Olimpiada Chilena de Inform\'atica\\ \the\year}
   \vskip 10pt
   \large{\thephase}
-  \vskip 10pt
-  \normalsize{\it 12 de Noviembre, \the\year}
+  \vskip 20pt
+  \normalsize{\it Jornadas Chilenas de Computaci\'on \\ Escuela de Ingenier\'ia en Computaci\'on e Inform\'atica \\ Universidad Mayor \\ Santiago, 12 de Noviembre, \the\year}
 
   \vskip 95pt
 
