nuestros ultimos cambios

--- a/contest/A - ping-pong/documents/statement.tex
+++ b/contest/A - ping-pong/documents/statement.tex
@@ -41,7 +41,7 @@ Jota Pe y Nelman quedarían muy sorprendidos si alguien fuera capaz de adivinar 
 \end{inputDescription}
 
 \begin{outputDescription}
-  Tu programa debe imprimir un 1 si Jota Pe es quién ganará el partido y un 2 si Nelman es quién ganará el partido.
+  Tu programa debe imprimir un 1 si Jota Pe es quien ganará el partido y un 2 si Nelman es quien ganará el partido.
 \end{outputDescription}
 
 %  10 puntos: P = 1, A = B = 0 / respuesta = 2
