--- a/contest/C - interestelar/documents/statement.tex
+++ b/contest/C - interestelar/documents/statement.tex
@@ -50,7 +50,7 @@ Se garantiza que al menos habrán cinco sistemas para los cuales existen eventos
   \score{10} Se probarán varios casos donde $N=5$, $S=6$.
   \score{20} Se probarán varios casos donde $5 \le N \le 100$ y $5 \le S \le 100$.
   \score{30} Se probarán varios casos donde $100 < N \le 10^5$ y $100 < S \le 10^5$.
-  \score{35} Se probarán varios casos donde $100 < N \le 10^5$ y $10^8 < S \le 10^9$.
+  \score{35} Se probarán varios casos donde $100 < N \le 10^5$ y $10^5 < S \le 10^9$.
 \end{scoreDescription}
 
 \begin{sampleDescription}
@@ -69,7 +69,7 @@ Por su parte, en el segundo caso de ejemplo otra posible respuesta v\'alida pued
 \texttt{1 6 3 5 4}
 \end{center}
 
-M\'as aun, si analizas el tercer caso de ejemplo, en los sistemas \texttt{6} y \texttt{7} se detectaron
+Si analizas el tercer caso de ejemplo, en los sistemas \texttt{6} y \texttt{7} se detectaron
 3 pulsaciones, mientras que en los sistemas \texttt{1}, \texttt{2}, \texttt{4} y \texttt{5} 
 se detectaron exactamente 2 pulsaciones, y en los demás sistemas no se detectaron pulsaciones. 
 Por esto, las respuestas 
